--- a/app/pages/auth/signup/get-email/get-email.html
+++ b/app/pages/auth/signup/get-email/get-email.html
@@ -10,7 +10,7 @@
 
     <div>
         <h1 class="big-message">
-            Create Username & Password
+             Create your username and password
         </h1>
     </div>
 
