--- a/app/pages/main/home/player/stat-events/selected-stat-event/selected-stat-event.html
+++ b/app/pages/main/home/player/stat-events/selected-stat-event/selected-stat-event.html
@@ -65,14 +65,14 @@
                 <ion-col width-50 class="left-team">
                     <div>
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{game.TeamA}}</h2>
+                        <div text-wrap><b>{{game.TeamA}}</b></div>
                     </div>
                 </ion-col>
 
                 <ion-col width-50 class="right-team">
                     <div>
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{game.TeamB}}</h2>
+                        <div text-wrap><b>{{game.TeamB}}</b></div>
                     </div>
                 </ion-col>
 
