--- a/app/pages/main/events/event/event-schedule/schedule.html
+++ b/app/pages/main/events/event/event-schedule/schedule.html
@@ -22,7 +22,7 @@
     <!--<ion-refresher (ionRefresh)="doRefresh($event)">-->
     <!--<ion-refresher-content></ion-refresher-content>-->
     <!--</ion-refresher>-->
- <div *ngIf="dataLoading==false">
+ <div *ngIf="filteredCompletedPoolGames.length != 0">
     <ion-list-header>Completed Pool Games</ion-list-header>
 
     <ion-card class="matchup" *ngFor="let game of filteredCompletedPoolGames">
@@ -54,12 +54,13 @@
             </ion-row>
         </ion-grid>
     </ion-card>
-    <div class="card" *ngIf="filteredCompletedPoolGames.length == 0">
+ </div>
+ <!--  <div class="card" *ngIf="filteredCompletedPoolGames.length == 0">
        <div class="item">
           <h3 title>No Completed Pool Game(s) found.</h3>
        </div>
-   </div>
- 
+   </div>-->
+  <div *ngIf="filteredOngoingPoolGames.length != 0">
     <ion-list-header>Ongoing Pool Games</ion-list-header>
 
     <ion-card class="matchup" *ngFor="let game of filteredOngoingPoolGames" (click)="goToGameDetailsPage()">
@@ -98,11 +99,13 @@
             <!--</ion-row>-->
         </ion-grid>
     </ion-card>
-    <div class="card" *ngIf="filteredOngoingPoolGames.length == 0">
+  </div>
+ <!--   <div class="card" *ngIf="filteredOngoingPoolGames.length == 0">
        <div class="item">
           <h3 title>No Ongoing Pool Game(s) found.</h3>
        </div>
-   </div>
+   </div> -->
+    <div *ngIf="filteredUpcomingPoolGames.length != 0">
     <ion-list-header>Upcoming Pool Games</ion-list-header>
 
     <ion-card class="matchup" *ngFor="let game of filteredUpcomingPoolGames">
@@ -128,7 +131,7 @@
                 </ion-col>
                 <ion-col with-25 class="date-time">
                     <p>
-                        <span class="date">{{game.FormatGameDate}}</span>
+                        <span class="date">{{game.FormatGameDate.substring(0,3)}}</span>
                         <br>
                         <span class="time">{{convertToAmPm(game.StartDateTime.substring(11,16))}}</span>
                     </p>
@@ -141,11 +144,10 @@
             <!--</ion-row>-->
         </ion-grid>
     </ion-card>
-      <div class="card" *ngIf="filteredUpcomingPoolGames.length == 0">
-       <div class="item">
-          <h3 title>No Upcoming Pool Game(s) found.</h3>
-       </div>
-   </div>
-   </div>
+    </div>
+      <div  *ngIf="((filteredUpcomingPoolGames.length == 0)&&(filteredOngoingPoolGames.length==0)&&(filteredCompletedPoolGames.length==0)&&(dataLoading==false))">
+          <h6>No schedule found.</h6>
+   </div> 
+ <!-- </div> -->
  <ion-spinner name="bubbles"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
 </ion-content>
