--- a/app/pages/record-stats/edit-record-stats.html
+++ b/app/pages/record-stats/edit-record-stats.html
@@ -41,31 +41,32 @@
                 </ion-col>
             </ion-row>
 
-       <!--     <ion-row class="player">
+            <ion-row class="player">
                 <ion-col>
-                    <p>
-                        <ion-icon name="radio-button-on" danger></ion-icon>
-                        <ion-icon name="radio-button-on" danger></ion-icon>
-                        <ion-icon name="radio-button-off" danger></ion-icon>
-                        <ion-icon name="radio-button-off" danger></ion-icon>
-                        <ion-icon name="radio-button-off" danger></ion-icon>
+                  <p>
+                        <span item-left *ngFor="let i of foulcount| fill">
+                            <ion-icon name="radio-button-on" danger></ion-icon>
+                        </span>
+                        <span item-left *ngFor="let i of (5-foulcount)| fill">
+                            <ion-icon name="radio-button-off" danger></ion-icon>
+                        </span>
                     </p>
                 </ion-col>
-            </ion-row> -->
+            </ion-row> 
 
             <ion-row class="stats-matchup">
 
                 <ion-col width-50 class="left-team">
                     <div>
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{Stats_Game.TeamA}}</h2>
+                        <div text-wrap><b>{{Stats_Game.TeamA}}</b></div>
                     </div>
                 </ion-col>
 
                 <ion-col width-50 class="right-team">
                     <div>
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{Stats_Game.TeamB}}</h2>
+                        <div text-wrap><b>{{Stats_Game.TeamB}}</b></div>
                     </div>
                 </ion-col>
             </ion-row>
@@ -95,7 +96,7 @@
                 <ion-col width-50 >
                 <ion-item>
                     <ion-label stacked>Made 2</ion-label>
-                    <ion-select [(ngModel)]="made2" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="made2" (ionChange)="onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -103,7 +104,7 @@
                 <ion-col width-50>
                    <ion-item block outline danger>
                     <ion-label stacked>Missed 2</ion-label>
-                    <ion-select [(ngModel)]="missed2" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="missed2" (ionChange)="onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -114,7 +115,7 @@
                 <ion-col width-50>
                      <ion-item block outline success>
                     <ion-label stacked>Made 3</ion-label>
-                    <ion-select [(ngModel)]="made3" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="made3" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -122,7 +123,7 @@
                 <ion-col width-50>
                      <ion-item block outline danger>
                     <ion-label stacked>Missed 3</ion-label>
-                    <ion-select [(ngModel)]="missed3" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="missed3" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -133,7 +134,7 @@
                 <ion-col width-50>
                      <ion-item block outline success>
                     <ion-label stacked>Made FT</ion-label>
-                    <ion-select [(ngModel)]="madeft" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="madeft" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -141,7 +142,7 @@
                 <ion-col width-50>
                     <ion-item block outline danger>
                     <ion-label stacked>Missed FT</ion-label>
-                    <ion-select [(ngModel)]="missedft" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="missedft" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -158,7 +159,7 @@
                 <ion-col width-25>
                      <ion-item block outline orange>
                     <ion-label stacked>Assist</ion-label>
-                    <ion-select [(ngModel)]="assist" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="assist" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -166,7 +167,7 @@
                 <ion-col width-25>
                      <ion-item block outline orange>
                     <ion-label stacked>Steal</ion-label>
-                    <ion-select [(ngModel)]="steal" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="steal" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -174,7 +175,7 @@
                 <ion-col width-25>
                     <ion-item block outline orange>
                     <ion-label stacked>Turn.</ion-label>
-                    <ion-select [(ngModel)]="turn" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="turn" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -182,7 +183,7 @@
                 <ion-col width-25>
                      <ion-item block outline orange>
                     <ion-label stacked>Block</ion-label>
-                    <ion-select [(ngModel)]="block" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="block" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -200,7 +201,7 @@
                 <ion-col width-50>
                     <ion-item block outline secondary>
                     <ion-label stacked>Def. Rebound</ion-label>
-                    <ion-select [(ngModel)]="defrebound" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="defrebound" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -208,7 +209,7 @@
                 <ion-col width-50>
                      <ion-item block outline secondary>
                     <ion-label stacked>Off. Rebound</ion-label>
-                    <ion-select [(ngModel)]="offrebound" (ionChange)="onChange()">
+                    <ion-select [(ngModel)]="offrebound" (ionChange)= "onChange()" [disabled]="foulcount>=5">
                         <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
@@ -227,16 +228,16 @@
                 <ion-col block outline danger width-50>
                      <ion-item >
                     <ion-label stacked>Per Fouls</ion-label>
-                    <ion-select [(ngModel)]="perfouls" (ionChange)="onChange()">
-                        <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
+                    <ion-select [(ngModel)]="perfouls" (ionChange)= "onChange()">
+                        <ion-option *ngFor="let r of perfoulsrange" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
                 </ion-col>
                 <ion-col width-50>
                      <ion-item block outline danger>
                     <ion-label stacked>Tech Fouls</ion-label>
-                    <ion-select [(ngModel)]="techfouls" (ionChange)="onChange()">
-                        <ion-option *ngFor="let r of range" [value]="r">{{r}}</ion-option>
+                    <ion-select [(ngModel)]="techfouls" (ionChange)= "onChange()">
+                        <ion-option *ngFor="let r of techfoulsrange" [value]="r">{{r}}</ion-option>
                      </ion-select>
                 </ion-item>
                 </ion-col>
