--- a/app/pages/main/events/event/game-details/game-details.html
+++ b/app/pages/main/events/event/game-details/game-details.html
@@ -9,19 +9,19 @@
             </button>
         </ion-buttons>
 
-        <ion-buttons end>
+   <!--     <ion-buttons end>
             <button (click)="dismiss()">
                 <span showWhen="ios">Share</span>
                 <ion-icon name="md-share" showWhen="android,windows"></ion-icon>
             </button>
-        </ion-buttons>
+        </ion-buttons>-->
 
     </ion-navbar>
 </ion-header>
 
 <ion-content>
 
-    <ion-card *ngFor="let game of matchup">
+    <ion-card>
         <ion-grid class="stats-matchup">
 
             <ion-row class="stats-matchup">
@@ -29,18 +29,18 @@
                 <ion-col width-50 class="left-team">
                     <div class="A-6">
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{game.team1}}</h2>
-                        <p>{{game.team1Coach}}</p>
-                        <p>(0 - 1)</p>
+                        <h2>{{SelectedGame.Team1Name}}</h2>
+                        <p>{{SelectedGame.Coach1Name}}</p>
+                      <!--  <p>(0 - 1)</p>-->
                     </div>
                 </ion-col>
 
                 <ion-col width-50 class="right-team">
                     <div class="A-6">
                         <img src="medal-shadow.png" alt="">
-                        <h2>{{game.team2}}</h2>
-                        <p>{{game.team1Coach}}</p>
-                        <p>(0 - 1)</p>
+                         <h2>{{SelectedGame.Team2Name}}</h2>
+                        <p>{{SelectedGame.Coach2Name}}</p>
+                     <!--   <p>(0 - 1)</p> -->
                     </div>
                 </ion-col>
             </ion-row>
@@ -67,12 +67,12 @@
         </div>
         <ion-list radio-group>
             <ion-item>
-                <h2 title>Madison Square Garden</h2>
-                <p>Court 5</p>
+                <h2 title>{{SelectedGame.LocationName}}</h2>
+                <p>Court {{SelectedGame.CourtName}}</p>
             </ion-item>
         </ion-list>
         <div padding-thin>
-            <button block small outline>
+            <button block small outline (click)="loadMap(facilityaddress)">
                 <ion-icon name="navigate"></ion-icon>
                 Get Direction
             </button>
@@ -108,8 +108,8 @@
                 <ion-avatar class="A-5" item-left>
                     <img src="calendar.svg" style="background-color: #f8f8f8" alt="">
                 </ion-avatar>
-                <h2 title>Sunday</h2>
-                <p>November 12, 2016</p>
+                <h2 title>{{getDay(SelectedGame.GameDate)}}</h2>
+                <p>{{getFormattedDate(SelectedGame.GameDate)}}</p>
             </ion-item>
         </ion-list>
     </ion-card>
@@ -122,7 +122,7 @@
                 <ion-avatar class="A-5" item-left>
                     <img src="time.svg" style="background-color: #f8f8f8" alt="">
                 </ion-avatar>
-                <h2 title>8:00 PM</h2>
+                <h2 title>{{convertToAmPm(SelectedGame.StartDateTime.substring(11,16))}}</h2>
             </ion-item>
         </ion-list>
     </ion-card>
@@ -148,7 +148,7 @@
     <ion-card>
         <ion-list>
             <ion-item>
-                <h2 title>Boys 12U</h2>
+                <h2 title>{{SelectedGame.DivisionName}}</h2>
             </ion-item>
         </ion-list>
     </ion-card>
@@ -159,12 +159,12 @@
     <ion-card>
         <ion-list>
             <ion-item>
-                <h2 title>Division II American Silver</h2>
+                <h2 title>{{SelectedGame.PoolName}}</h2>
             </ion-item>
         </ion-list>
     </ion-card>
 
-    <!--Alerts & Reminders-->
+    <!--Alerts & Reminders
     <ion-list-header>Alerts / Reminders</ion-list-header>
 
     <ion-card>
@@ -181,6 +181,6 @@
             </ion-item>
 
         </ion-list>
-    </ion-card>
+    </ion-card>-->
 
 </ion-content>
